Add name pronounciation

--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
             <div class="col-md-10">
                 <div class="row" style="margin-top: 1.5em;">
                     <div class="col-sm-12" style="margin-bottom: 1em;">
-                    <h3 class="display-4" style="text-align: center;"><span style="font-weight: bold;">Atakan</span> Topaloğlu</h3>
+                    <h3 class="display-4" style="text-align: center; margin-bottom: 0.3em;"><span style="font-weight: bold;">Atakan</span> Topaloğlu</h3>
+                    <p style="text-align: center; font-size: 0.8rem; color: #6c757d; margin-top: -10px;">(AH-tah-kahn TOH-pah-loh-loo)</p>
                     </div>
                     <br>
                     <div class="col-md-10" style="">
                         
                 <p>
                     I'm a first-year MSc Student in Electrical Engineering and Information Technology at <b>ETH Zürich</b> working on <b>3D Vision</b>, working as a Research Assistant in the <a href="https://prs.igp.ethz.ch/" target="_blank">Photogrammetry and Remote Sensing Lab </a> supervised by <a href="https://scholar.google.com/citations?user=FZuNgqIAAAAJ&hl=en" target="_blank">Prof. Konrad Schindler</a>.
-                    Prior to this, I spent three years at Siemens during my undergraduate studies, where I had the pleasure of contributing to engaging projects alongside highly talented colleagues as a R&D Working Student.
+                    Prior to this, I spent three years at <b>Siemens</b> during my undergraduate studies, where I had the pleasure of contributing to engaging projects alongside highly talented colleagues as a R&D Working Student.
 
                 </p>
                 <p>For any inquiries, feel free to reach out to me via mail!</p>
