Add highschool and Uni

--- a/index.html
+++ b/index.html
@@ -29,11 +29,15 @@
                     <br>
                     <div class="col-md-10" style="">
                         
-                <p>
-                    I'm a first-year MSc Student in Electrical Engineering and Information Technology at <b>ETH Zürich</b> working on <b>3D Vision</b>, working as a Research Assistant in the <a href="https://prs.igp.ethz.ch/" target="_blank">Photogrammetry and Remote Sensing Lab </a> supervised by <a href="https://scholar.google.com/citations?user=FZuNgqIAAAAJ&hl=en" target="_blank">Prof. Konrad Schindler</a>.
-                    Prior to this, I spent three years at <b>Siemens</b> during my undergraduate studies, where I had the pleasure of contributing to engaging projects alongside highly talented colleagues as a R&D Working Student.
-
-                </p>
+             <p>
+    I'm a first-year MSc student in Electrical Engineering and Information Technology at <b>ETH Zürich</b>, specializing in <b>3D Vision</b>. I work as a <b>Research Assistant</b> in the 
+    <a href="https://prs.igp.ethz.ch/" target="_blank"><b>Photogrammetry and Remote Sensing Lab</b></a>, supervised by Prof. Konrad Schindler. <br>
+    I completed my BSc at 
+    <a href="https://en.wikipedia.org/wiki/Ko%C3%A7_University" target="_blank">Koç University</a> and studied at 
+    <a href="https://website.robcol.k12.tr/en/about-rc" target="_blank">Robert College</a> in Istanbul. 
+    During my undergraduate studies, I spent three years at 
+    <a href="https://www.siemens.com/" target="_blank">Siemens</a> as an R&D Working Student, where I contributed to engaging projects alongside highly talented colleagues.
+</p>
                 <p>For any inquiries, feel free to reach out to me via mail!</p>
                 <p>
                     <a href="https://atakan-topaloglu.github.io/assets/pdf/Atakan_Topaloglu_Resume.pdf" target="_blank" style="margin-right: 5px"><i class="fa fa-address-card fa-lg"></i> CV</a>
