Modified the bio_text for clarity

--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
     I completed my BSc at 
     <a href="https://en.wikipedia.org/wiki/Ko%C3%A7_University" target="_blank">Koç University</a> and studied at 
     <a href="https://website.robcol.k12.tr/en/about-rc" target="_blank">Robert College</a> in Istanbul. 
-    During my undergraduate studies, I spent three years at 
-    <a href="https://www.siemens.com/" target="_blank">Siemens</a> as an R&D Working Student, where I contributed to engaging projects alongside highly talented colleagues.
+    During my undergraduate studies, I spent three years at Siemens, where I contributed to projects alongside highly talented colleagues as an R&D Working Student.
 </p>
                 <p>For any inquiries, feel free to reach out to me via mail!</p>
                 <p>
