Renewal of IEEE SPS Scholarship for 2025

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <div id="demo" class="collapse">
                     <span style="font-weight: bold;">Awards:</span>
                       <ul>    
-                   <li> In 2024, I was awarded the <a href="https://signalprocessingsociety.org/community-involvement/sps-scholarship-program" target="_blank">IEEE Signal Processing Society Scholarship </a> as the <b>first ever recipient from a Turkish University</b>. </li>
+                   <li> In 2024, I was awarded the <a href="https://signalprocessingsociety.org/community-involvement/sps-scholarship-program" target="_blank">IEEE Signal Processing Society Scholarship </a> as the <b>first ever recipient from a Turkish University</b>. In 2025, the scholarship was renewed during my first year of MSc in ETH Zürich. </li>
                    <li> We were awarded the best graduation project award on our work on Single-Image-Super-Resolution Evaluation Methodologies under the supervision of <a href="https://scholar.google.com/citations?user=GzwcDjUAAAAJ&hl=en" target="_blank">Prof. Murat Tekalp</a>. </li>
                    <li> I gratefully thank the Hisar Educational Foundation for supporting my undergraduate studies with their scholarship. </li>
                     </ul>
