Added metadata and updated resume

--- a/index.html
+++ b/index.html
@@ -6,13 +6,55 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="Atakan Topaloğlu — MSc Electrical Engineering student at ETH Zürich researching 3D scene understanding, visual representation learning, Gaussian Splatting, and computer vision.">
+  <meta name="author" content="Atakan Topaloğlu">
+  <meta name="keywords" content="Atakan Topaloglu, Atakan Topaloğlu, ETH Zürich, ETH Zurich, 3D scene understanding, Gaussian Splatting, computer vision researcher, visual representation learning">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://atakan-topaloglu.github.io/">
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="en_US">
+  <meta property="og:title" content="Atakan Topaloğlu | 3D Scene Understanding Researcher">
+  <meta property="og:description" content="Atakan Topaloğlu — MSc Electrical Engineering student at ETH Zürich researching 3D scene understanding, visual representation learning, Gaussian Splatting, and computer vision.">
+  <meta property="og:url" content="https://atakan-topaloglu.github.io/">
+  <meta property="og:image" content="https://atakan-topaloglu.github.io/assets/img/profile.jpg">
+  <meta property="og:site_name" content="Atakan Topaloğlu | 3D Scene Understanding Researcher">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Atakan Topaloğlu | 3D Scene Understanding Researcher">
+  <meta name="twitter:description" content="Atakan Topaloğlu — MSc Electrical Engineering student at ETH Zürich researching 3D scene understanding, visual representation learning, Gaussian Splatting, and computer vision.">
+  <meta name="twitter:image" content="https://atakan-topaloglu.github.io/assets/img/profile.jpg">
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+  "name": "Atakan Topaloğlu",
+  "alternateName": "Atakan Topaloglu",
+  "url": "https://atakan-topaloglu.github.io/",
+  "image": "https://atakan-topaloglu.github.io/assets/img/profile.jpg",
+  "jobTitle": "MSc Student, ETH Zürich — 3D Scene Understanding & Visual Representation Learning",
+  "affiliation": {
+    "@type": "CollegeOrUniversity",
+    "name": "ETH Zürich",
+    "url": "https://ethz.ch/en.html"
+  },
+  "email": "mailto:atopaloglu@ethz.ch",
+  "sameAs": [
+    "https://scholar.google.com/citations?user=l9mFndIAAAAJ&hl=en",
+    "https://github.com/atakan-topaloglu",
+    "https://www.linkedin.com/in/atakan-topaloglu",
+    "mailto:atopaloglu@ethz.ch"
+  ]
+}
+  </script>
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-  <title>Atakan Topaloğlu</title>
+  <title>Atakan Topaloğlu | 3D Scene Understanding Researcher</title>
   <link rel="icon" type="image/x-icon" href="assets/favicon.ico?v=5">
 </head>
 
@@ -23,7 +65,7 @@
             <div class="col-md-10">
                 <div class="row" style="margin-top: 1.5em;">
                     <div class="col-sm-12" style="margin-bottom: 0em;">
-                    <h3 class="display-4" style="text-align: center; margin-bottom: 0.3em;"><span style="font-weight: bold;">Atakan</span> Topaloğlu</h3>
+                    <h1 class="display-4" style="text-align: center; margin-bottom: 0.3em;"><span style="font-weight: bold;">Atakan</span> Topaloğlu</h1>
                     </div>
                     <br>
                     <div class="col-md-10" style="">
@@ -59,7 +101,7 @@
     
                     </div>
                     <div class="col-md-2 text-center text-md-right">
-                        <img src="assets/img/profile.jpg" class="img-thumbnail" width="280px" alt="Profile picture">
+                        <img src="assets/img/profile.jpg" class="img-thumbnail" width="280px" alt="Portrait of Atakan Topaloğlu" loading="lazy" decoding="async">
                     </div>
                 </div>
                 
@@ -67,13 +109,13 @@
 
                 <div class="row" style="margin-top: 1em;">
                     <div class="col-sm-12" style="">
-                        <h4>📚 Publications</h4>
-                        <div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><a href="https://atakan-topaloglu.github.io/oraclegs/" target="_blank"><img src="assets/img/publications/oraclegs.jpg" class="img-fluid img-thumbnail" alt="Project image"></a></div><div class="col-sm-9"><b><a href="https://atakan-topaloglu.github.io/oraclegs/" target="_blank">OracleGS: Grounding Generative Priors for Sparse-View Gaussian Splatting</a></b> <br><span style="font-weight: bold";>Atakan Topaloglu</span>, <a href="https://campus.tum.de/tumonline/ee/ui/ca2/app/desktop/#/pl/ui/$ctx/visitenkarte.show_vcard?$ctx=design=ca2;header=max;lang=de&pPersonenGruppe=3&pPersonenId=6EC78DAA25310FF2" target="_blank">Kunyi Li</a>, <a href="https://m-niemeyer.github.io/" target="_blank">Michael Niemeyer</a>, <a href="https://www.professoren.tum.de/en/navab-nassir" target="_blank">Nassir Navab</a>, <a href="https://scholar.google.com.tr/citations?user=GzwcDjUAAAAJ&hl=en" target="_blank">A. Murat Tekalp</a>, <a href="https://federicotombari.github.io/" target="_blank">Federico Tombari</a> <br><span style="font-style: italic;">Proc. of the IEEE Winter Conf. on Applications of Computer Vision (WACV)</span>, 2026 <br><a href="https://atakan-topaloglu.github.io/oraclegs/" target="_blank">Project Page</a> / <a href="https://arxiv.org/abs/2509.23258" target="_blank">Paper</a> / <a href="assets/pdf/oraclegs_supp.pdf" target="_blank">Supplementary</a> /<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsetopaloglu2025oraclegsgroundinggenerativepriors" aria-expanded="false" aria-controls="collapseExample" style="margin-left: -6px; margin-top: -2px;">Expand bibtex</button><div class="collapse" id="collapsetopaloglu2025oraclegsgroundinggenerativepriors"><div class="card card-body"><pre><code>@InProceedings{topaloglu2025oraclegsgroundinggenerativepriors, 
+                        <h4>Publications</h4>
+                        <div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><a href="https://atakan-topaloglu.github.io/oraclegs/" target="_blank"><img src="assets/img/publications/oraclegs.jpg" class="img-fluid img-thumbnail" alt="Thumbnail for OracleGS: Grounding Generative Priors for Sparse-View Gaussian Splatting" loading="lazy" decoding="async"></a></div><div class="col-sm-9"><b><a href="https://atakan-topaloglu.github.io/oraclegs/" target="_blank">OracleGS: Grounding Generative Priors for Sparse-View Gaussian Splatting</a></b> <br><span style="font-weight: bold";>Atakan Topaloglu</span>, <a href="https://campus.tum.de/tumonline/ee/ui/ca2/app/desktop/#/pl/ui/$ctx/visitenkarte.show_vcard?$ctx=design=ca2;header=max;lang=de&pPersonenGruppe=3&pPersonenId=6EC78DAA25310FF2" target="_blank">Kunyi Li</a>, <a href="https://m-niemeyer.github.io/" target="_blank">Michael Niemeyer</a>, <a href="https://www.professoren.tum.de/en/navab-nassir" target="_blank">Nassir Navab</a>, <a href="https://scholar.google.com.tr/citations?user=GzwcDjUAAAAJ&hl=en" target="_blank">A. Murat Tekalp</a>, <a href="https://federicotombari.github.io/" target="_blank">Federico Tombari</a> <br><span style="font-style: italic;">Proc. of the IEEE Winter Conf. on Applications of Computer Vision (WACV)</span>, 2026 <br><a href="https://atakan-topaloglu.github.io/oraclegs/" target="_blank">Project Page</a> / <a href="https://arxiv.org/abs/2509.23258" target="_blank">Paper</a> / <a href="assets/pdf/oraclegs_supp.pdf" target="_blank">Supplementary</a> /<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsetopaloglu2025oraclegsgroundinggenerativepriors" aria-expanded="false" aria-controls="collapseExample" style="margin-left: -6px; margin-top: -2px;">Expand bibtex</button><div class="collapse" id="collapsetopaloglu2025oraclegsgroundinggenerativepriors"><div class="card card-body"><pre><code>@InProceedings{topaloglu2025oraclegsgroundinggenerativepriors, 
 	author = {Atakan Topaloglu and Kunyi Li and Michael Niemeyer and Nassir Navab and A. Murat Tekalp and Federico Tombari}, 
 	title = {OracleGS: Grounding Generative Priors for Sparse-View Gaussian Splatting}, 
 	booktitle = {Proc. of the IEEE Winter Conf. on Applications of Computer Vision (WACV)}, 
 	year = {2026}, 
-}</pre></code></div></div> </div> </div> </div><div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><a href="https://arxiv.org/abs/2509.26398" target="_blank"><img src="assets/img/publications/imagedifficultyawareevaluationsuperresolutionmodels.jpg" class="img-fluid img-thumbnail" alt="Project image"></a></div><div class="col-sm-9"><b><a href="https://arxiv.org/abs/2509.26398" target="_blank">Image-Difficulty-Aware Evaluation of Super-Resolution Models</a></b> <br><span style="font-weight: bold";>Atakan Topaloglu</span>*, <a href="https://scholar.google.com/citations?user=y9uameUAAAAJ&hl=en" target="_blank">Ahmet Bilican</a>*, <a href="https://mandalinadagi.github.io/" target="_blank">Cansu Korkmaz</a>, <a href="https://scholar.google.com.tr/citations?user=GzwcDjUAAAAJ&hl=en" target="_blank">A. Murat Tekalp</a> <br><span style="font-style: italic;">Proc. of the IEEE International Conf. on Image Processing Workshop (ICIPW)</span>, 2025 <br><a href="https://arxiv.org/abs/2509.26398" target="_blank">Paper</a> / <a href="https://youtu.be/0orSH7C6W8o" target="_blank">Video</a> / <a href="assets/pdf/imagedifficultyawareevaluationsuperresolutionmodels.pdf" target="_blank">Poster</a> /<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsetopaloglu2025imagedifficultyawareevaluationsuperresolutionmodels" aria-expanded="false" aria-controls="collapseExample" style="margin-left: -6px; margin-top: -2px;">Expand bibtex</button><div class="collapse" id="collapsetopaloglu2025imagedifficultyawareevaluationsuperresolutionmodels"><div class="card card-body"><pre><code>@InProceedings{topaloglu2025imagedifficultyawareevaluationsuperresolutionmodels, 
+}</pre></code></div></div> </div> </div> </div><div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><a href="https://arxiv.org/abs/2509.26398" target="_blank"><img src="assets/img/publications/imagedifficultyawareevaluationsuperresolutionmodels.jpg" class="img-fluid img-thumbnail" alt="Thumbnail for Image-Difficulty-Aware Evaluation of Super-Resolution Models" loading="lazy" decoding="async"></a></div><div class="col-sm-9"><b><a href="https://arxiv.org/abs/2509.26398" target="_blank">Image-Difficulty-Aware Evaluation of Super-Resolution Models</a></b> <br><span style="font-weight: bold";>Atakan Topaloglu</span>*, <a href="https://scholar.google.com/citations?user=y9uameUAAAAJ&hl=en" target="_blank">Ahmet Bilican</a>*, <a href="https://mandalinadagi.github.io/" target="_blank">Cansu Korkmaz</a>, <a href="https://scholar.google.com.tr/citations?user=GzwcDjUAAAAJ&hl=en" target="_blank">A. Murat Tekalp</a> <br><span style="font-style: italic;">Proc. of the IEEE International Conf. on Image Processing Workshop (ICIPW)</span>, 2025 <br><a href="https://arxiv.org/abs/2509.26398" target="_blank">Paper</a> / <a href="https://youtu.be/0orSH7C6W8o" target="_blank">Video</a> / <a href="assets/pdf/imagedifficultyawareevaluationsuperresolutionmodels.pdf" target="_blank">Poster</a> /<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapsetopaloglu2025imagedifficultyawareevaluationsuperresolutionmodels" aria-expanded="false" aria-controls="collapseExample" style="margin-left: -6px; margin-top: -2px;">Expand bibtex</button><div class="collapse" id="collapsetopaloglu2025imagedifficultyawareevaluationsuperresolutionmodels"><div class="card card-body"><pre><code>@InProceedings{topaloglu2025imagedifficultyawareevaluationsuperresolutionmodels, 
 	author = {Atakan Topaloglu and Ahmet Bilican and Cansu Korkmaz and A. Murat Tekalp}, 
 	title = {Image-Difficulty-Aware Evaluation of Super-Resolution Models}, 
 	booktitle = {Proc. of the IEEE International Conf. on Image Processing Workshop (ICIPW)}, 
@@ -84,8 +126,8 @@
                 <hr style="border: none; border-top: 1px solid #eaeaea; margin: 1em 0; opacity: 0.3;">
                  <div class="row" style="margin-top: 1.5em;">
                      <div class="col-sm-12" style="">
-                     <h4>💻 Selected Projects from Siemens R&D</h4>
-                        <div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/project/3dgs_gaga.png" class="img-fluid img-thumbnail" alt="Project image"></div><div class="col-sm-9"><p style="font-weight: bold; margin-bottom: 0.5em;">3D Semantic Segmentation with SAM2 Memory Bank</p><div>We noticed that <a href="https://github.com/weijielyu/Gaga" target="_blank">GaGa</a> (Lyu et al.) repeatedly labeled the same objects when revisiting regions, especially textureless regions, such as walls, failing to maintain consistency across views. To address this, we leveraged the existing SAM2 memory bank and used our dense images and pose-based image warping to project previous masks onto new viewpoints. This simple approach enforced mask consistency in indoor scenes with "loop closure", reducing duplicate labeling especially in textureless regions.</div><p style="margin-top: 0.5em;"><a href="https://forms.gle/ZJ55t5bhZ2yUvYeB8">Request Access via Form</a></p> </div> </div> </div><div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/project/3dgs_compress_smartphone.png" class="img-fluid img-thumbnail" alt="Project image"></div><div class="col-sm-9"><p style="font-weight: bold; margin-bottom: 0.5em;">3D Gaussian Splatting from Smartphone Cameras</p><div>We found that aggressive downsampling and color palette quantization of input images had minimal effect on Gaussian Splatting quality in indoor scenes. Leveraging this insight, we redesigned the data pipeline to apply these steps after structure-from-motion (SfM), reducing memory consumption by 83%. In addition, a lightweight interface was developed to make the pipeline accessible for everyday captures from smartphone cameras, lowering the barrier for SMEs and non-expert users to generate their own splats. The final model was reconstructed with maximum GPU VRAM utilization of 3.9 GB from 729 images, occupying 122 MB on disk.</div><p style="margin-top: 0.5em;"><a href="https://forms.gle/ZJ55t5bhZ2yUvYeB8">Request Access via Form</a></p> </div> </div> </div><div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/project/3dgs_bim.png" class="img-fluid img-thumbnail" alt="Project image"></div><div class="col-sm-9"><p style="font-weight: bold; margin-bottom: 0.5em;">Building Information Modelling (BIM) PoC on CPU</p><div>Developed a proof-of-concept for a Building Information Modeling viewer designed to run efficiently on consumer-grade hardware. This demonstration runs smoothly on an 8th Gen Intel i5 CPU (4 cores, 8 GB RAM, 2.8 GHz) with no dedicated GPU.</div><p style="margin-top: 0.5em;"><a href="https://forms.gle/ZJ55t5bhZ2yUvYeB8">Request Access via Form</a></p> </div> </div> </div>
+                     <h4>Selected Projects from Siemens R&D</h4>
+                        <div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/project/3dgs_gaga.png" class="img-fluid img-thumbnail" alt="Thumbnail for 3D Semantic Segmentation with SAM2 Memory Bank" loading="lazy" decoding="async"></div><div class="col-sm-9"><p style="font-weight: bold; margin-bottom: 0.5em;">3D Semantic Segmentation with SAM2 Memory Bank</p><div>We noticed that <a href="https://github.com/weijielyu/Gaga" target="_blank">GaGa</a> (Lyu et al.) repeatedly labeled the same objects when revisiting regions, especially textureless regions, such as walls, failing to maintain consistency across views. To address this, we leveraged the existing SAM2 memory bank and used our dense images and pose-based image warping to project previous masks onto new viewpoints. This simple approach enforced mask consistency in indoor scenes with "loop closure", reducing duplicate labeling especially in textureless regions.</div><p style="margin-top: 0.5em;"><a href="https://forms.gle/ZJ55t5bhZ2yUvYeB8">Request Access via Form</a></p> </div> </div> </div><div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/project/3dgs_compress_smartphone.png" class="img-fluid img-thumbnail" alt="Thumbnail for 3D Gaussian Splatting from Smartphone Cameras" loading="lazy" decoding="async"></div><div class="col-sm-9"><p style="font-weight: bold; margin-bottom: 0.5em;">3D Gaussian Splatting from Smartphone Cameras</p><div>We found that aggressive downsampling and color palette quantization of input images had minimal effect on Gaussian Splatting quality in indoor scenes. Leveraging this insight, we redesigned the data pipeline to apply these steps after structure-from-motion (SfM), reducing memory consumption by 83%. In addition, a lightweight interface was developed to make the pipeline accessible for everyday captures from smartphone cameras, lowering the barrier for SMEs and non-expert users to generate their own splats. The final model was reconstructed with maximum GPU VRAM utilization of 3.9 GB from 729 images, occupying 122 MB on disk.</div><p style="margin-top: 0.5em;"><a href="https://forms.gle/ZJ55t5bhZ2yUvYeB8">Request Access via Form</a></p> </div> </div> </div><div style="margin-bottom: 1.5em;"> <div class="row"><div class="col-sm-3"><img src="assets/img/project/3dgs_bim.png" class="img-fluid img-thumbnail" alt="Thumbnail for Building Information Modelling (BIM) PoC on CPU" loading="lazy" decoding="async"></div><div class="col-sm-9"><p style="font-weight: bold; margin-bottom: 0.5em;">Building Information Modelling (BIM) PoC on CPU</p><div>Developed a proof-of-concept for a Building Information Modeling viewer designed to run efficiently on consumer-grade hardware. This demonstration runs smoothly on an 8th Gen Intel i5 CPU (4 cores, 8 GB RAM, 2.8 GHz) with no dedicated GPU.</div><p style="margin-top: 0.5em;"><a href="https://forms.gle/ZJ55t5bhZ2yUvYeB8">Request Access via Form</a></p> </div> </div> </div>
                     </div>
                 </div>
                     </div>
