Added favicon to root for google site replicability

--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <title>Atakan Topaloğlu | 3D Scene Understanding Researcher</title>
-  <link rel="icon" type="image/x-icon" href="assets/favicon.ico?v=5">
+  <!-- Favicons for Google Search and browsers -->
+  <link rel="icon" type="image/x-icon" href="https://atakan-topaloglu.github.io/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="https://atakan-topaloglu.github.io/assets/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://atakan-topaloglu.github.io/assets/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://atakan-topaloglu.github.io/assets/favicon.ico">
+  <link rel="shortcut icon" href="https://atakan-topaloglu.github.io/favicon.ico">
+  <link rel="apple-touch-icon" href="https://atakan-topaloglu.github.io/assets/favicon.ico">
 </head>
 
 <body>
